Modal added to card page. Fixed bug in statistic page with wrong visibility of chart. Fixed users state management.

--- a/src/app/Pages/card-page/card-page.component.css
+++ b/src/app/Pages/card-page/card-page.component.css
@@ -93,3 +93,20 @@ div{
   padding: 12px;
 }
 
+.modal{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  position: absolute;
+  z-index: 1;
+  backdrop-filter: blur(20px);
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.content{
+  font-size: xx-large;
+  color: white;
+}
